plugins {
  id 'java'
  id 'application'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(23)
  }
}

application {
  mainClass = 'com.mygdx.spaceshooter.Main' // Replace this with your main class
}

repositories {
  mavenCentral()
}

dependencies {
  implementation "com.badlogicgames.gdx:gdx:1.11.0"
  implementation "com.badlogicgames.gdx:gdx-backend-lwjgl:1.11.0"
  implementation "com.badlogicgames.gdx:gdx-platform:1.11.0:natives-desktop"
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
  jvmArgs += "--enable-preview"
}
